Breakpoint Save button is missing fixes #3061

--- a/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
+++ b/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
@@ -181,12 +181,12 @@
 }
 
 .breakpoint-panel button.save {
-  background: var(--primaryAccentHover);
+  background: var(--primary-accent);
   color: white;
 }
 
 .breakpoint-panel button.save:hover {
-  background: #2270ec;
+  background: var(--primary-accent-hover);
   color: white;
 }
 
