Add doctype to index.html

--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -28,6 +28,12 @@
 .toolbox-top-panels {
   width: 100%;
   height: 100%;
+  display: flex;
+}
+
+.toolbox-panel {
+  display: flex;
+  flex: 1;
 }
 
 /* Toolbar Styles */
