--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,9 @@
   display: flex;
   position: relative;
   flex-direction: column;
+  align-items: stretch;
   height: 100%;
+  width: 100%;
   font-family: system-ui, Arial, sans-serif;
   color: var(--theme-body-color);
   --light-grey: #969696;
@@ -15,6 +17,18 @@
 /* NOTE: this is added to protect against React DevTools */
 html {
   font-size: 12px !important;
+}
+
+html, body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 #video {
