--- a/src/devtools/client/debugger/src/components/SecondaryPanes/FrameTimeline.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/FrameTimeline.css
@@ -60,10 +60,9 @@ body.scrubbing {
 
 .frame-timeline-progress {
   background-color: var(--replaying-marker-future-fill);
-  position: relative;
+  position: absolute;
   width: 50%;
   height: 100%;
-  position: relative;
   display: inline-block;
   border-radius: 4px;
 }
