--- a/src/devtools/client/debugger/src/components/Editor/Editor.css
+++ b/src/devtools/client/debugger/src/components/Editor/Editor.css
@@ -3,7 +3,8 @@
  * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */
 
 .editor-wrapper {
-  --debug-line-border: rgb(145, 188, 219);
+  --debug-line-border: #037aff;
+  --debug-line-background: #e9f3ff;
   --debug-expression-background: rgba(202, 227, 255, 0.5);
   --debug-line-error-border: rgb(255, 0, 0);
   --debug-expression-error-background: rgba(231, 116, 113, 0.3);
@@ -13,6 +14,7 @@
 .theme-dark .editor-wrapper {
   --debug-expression-background: rgba(202, 227, 255, 0.3);
   --debug-line-border: #7786a2;
+  --debug-line-background: #e9f3ff;
 }
 
 .editor-wrapper .CodeMirror-linewidget {
@@ -138,7 +140,7 @@ html[dir="rtl"] .editor-mount {
 }
 
 .new-debug-line > .CodeMirror-line {
-  background-color: transparent !important;
+  background-color: var(--debug-line-background) !important ;
   outline: var(--debug-line-border) solid 1px;
 }
 
