--- a/src/devtools/client/debugger/src/components/SecondaryPanes/FrameTimeline.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/FrameTimeline.css
@@ -29,7 +29,7 @@ body.scrubbing {
 }
 
 .frame-timeline-bar {
-  background-color: var(--light-color-background-inactive);
+  background-color: var(--theme-splitter-color);
   width: 100%;
   height: 4px;
   position: relative;
