--- a/src/base.css
+++ b/src/base.css
@@ -3,7 +3,8 @@ html {
   font-size: 12px !important;
 }
 
-html, body {
+html,
+body {
   height: 100vh;
   width: 100vw;
   margin: 0;
@@ -13,6 +14,11 @@ html, body {
 
 * {
   box-sizing: border-box;
+}
+
+.showRedactions[data-private="true"] {
+  background: black !important;
+  border: 2px solid black !important;
 }
 
 #app {
