Revert "Add an add comment button to console log messages (#3184)"
This reverts commit c5997c26c9a0d6d77c154750e636223fc60e1489.

--- a/src/devtools/client/themes/webconsole.css
+++ b/src/devtools/client/themes/webconsole.css
@@ -312,8 +312,6 @@
 }
 
 .webconsole-app .message-location {
-  display: flex;
-  flex-direction: row;
   float: right;
   color: var(--frame-link-source);
   /* Makes the file name truncated (and ellipsis shown) on the left side */
@@ -323,7 +321,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 30%;
-  position: relative;
 }
 
 .message-location a {
@@ -1061,7 +1058,7 @@ a.learn-more-link.webconsole-learn-more-link {
 }
 
 .webconsole-output .overlay-container:not(.debug):hover .button {
-  background: linear-gradient(to bottom right, #68DCFC, #4689F8);
+  background: linear-gradient(152.2deg, #67daff 6.75%, #4382ff 93.14%);
   box-shadow: 1px 0px 3px rgb(0, 0, 0, 0.3);
 }
 
@@ -1074,27 +1071,4 @@ a.learn-more-link.webconsole-learn-more-link {
 
 .webconsole-output .overlay-container:hover .info .label {
   opacity: 100%;
-}
-
-.message .replay-button,
-.message .comment-button {
-  background: var(--primary-accent);
-  margin-left: 4px;
-  visibility: hidden;
-}
-
-.message .replay-button {
-  font-size: 14px;
-  padding: 1px 2px 1px 1px;
-}
-
-.message .comment-button {
-  font-size: 10px;
-  line-height: 14px;
-  padding: 1px 5px 1px 3px;
-}
-
-.message:hover .replay-button,
-.message:hover .comment-button {
-  visibility: visible;
 }
