--- a/src/devtools/client/themes/common.css
+++ b/src/devtools/client/themes/common.css
@@ -11,7 +11,7 @@
     * Workaround: specify font-size on root, on form inputs, and whenever
     * we're using the `font` shorthand. */
   font: message-box;
-  font-size: var(--theme-body-font-size);
+  font-size: var(--root-font-size);
 
   --tab-line-hover-color: rgba(0, 0, 0, 0.2);
   --tab-line-selected-color: var(--blue-50);
