Implement new library design

--- a/src/devtools/client/themes/variables.css
+++ b/src/devtools/client/themes/variables.css
@@ -52,6 +52,8 @@
   --secondary-accent: #8330f4;
   --secondary-accent-stroke: #f9f5ff;
 
+  --that-dark-color: #1F2937;
+
   --text-field-border: var(--cool-gray-300);
 
   --new-blue-50: #eff7ff;
