--- a/src/devtools/client/themes/webconsole.css
+++ b/src/devtools/client/themes/webconsole.css
@@ -976,16 +976,16 @@ a.learn-more-link.webconsole-learn-more-link {
   --slide-in-duration: 50ms;
   --border-radius: 8px;
   --rewind-left-padding: 5px;
-  --rewind-info-button-width: 64px;
-  --fast-forward-info-button-width: 92px;
-  --debug-info-button-width: 100px;
+  --rewind-info-button-width: 68px;
+  --fast-forward-info-button-width: 100px;
+  --debug-info-button-width: 80px;
 }
 
 .webconsole-output .overlay-container .button {
   width: var(--rewind-button-width);
   padding-left: var(--rewind-left-padding);
   margin-left: calc(0px - var(--message-left-padding) - var(--rewind-button-width));
-  background: linear-gradient(0deg, #2d7eff 0%, #2d7eff 100%);
+  background: linear-gradient(0deg, var(--primary-accent) 0%, var(--primary-accent) 100%);
   /* for debugging the final position when hovered */
   /* margin-left: calc(0px - var(--message-left-padding)) !important; */
 }
@@ -1001,13 +1001,17 @@ a.learn-more-link.webconsole-learn-more-link {
 }
 
 .webconsole-output .overlay-container .info {
-  background-color: #2d7eff;
+  background-color: var(--primary-accent);
   /* for debugging the final position when hovered */
   /* margin-left: calc(var(--rewind-button-width) - var(--message-left-padding) - var(--border-radius)) !important; */
 }
 
 .webconsole-output .overlay-container.debug .info {
-  background-color: var(--paused-background-color);
+  background: linear-gradient(
+    0deg,
+    var(--paused-background-color) 0%,
+    var(--paused-background-color) 100%
+  );
   width: var(--debug-info-button-width);
   margin-left: calc(0px - var(--message-left-padding) - var(--debug-info-button-width));
 }
@@ -1023,11 +1027,11 @@ a.learn-more-link.webconsole-learn-more-link {
 }
 
 .webconsole-output .overlay-container .info .label {
+  font-size: 12px;
+  line-height: 10px;
+  font-weight: bold;
   color: white;
   opacity: 0%;
-  transition-duration: 100ms;
-  transition-delay: 150ms;
-  transition-timing-function: ease-in-out;
 }
 
 .webconsole-output .overlay-container .img {
@@ -1035,10 +1039,6 @@ a.learn-more-link.webconsole-learn-more-link {
   background-color: white;
   background-position: center;
   height: 14px;
-  transition-property: opacity;
-  transition-duration: 100ms;
-  transition-delay: 150ms;
-  transition-timing-function: ease-in-out;
 }
 
 .webconsole-output .overlay-container.fast-forward .img {
@@ -1063,18 +1063,18 @@ a.learn-more-link.webconsole-learn-more-link {
   opacity: 100%;
 }
 
-.webconsole-output .overlay-container.debug:hover .button {
-  background: linear-gradient(152.2deg, #AE95F9 6.75%, var(--paused-background-color) 93.14%);
-  box-shadow: 1px 0px 3px rgb(0, 0, 0, 0.3);
+.webconsole-output .overlay-container.debug:hover .button,
+.webconsole-output .overlay-container.debug:hover .info {
+  background: linear-gradient(180deg, #7F6BFF 0%, var(--paused-background-color) 100%);
 }
 
-.webconsole-output .overlay-container:not(.debug):hover .button {
-  background: linear-gradient(152.2deg, #67daff 6.75%, #4382ff 93.14%);
-  box-shadow: 1px 0px 3px rgb(0, 0, 0, 0.3);
+.webconsole-output .overlay-container:not(.debug):hover .button,
+.webconsole-output .overlay-container:not(.debug):hover .info {
+  background: linear-gradient(180deg, #3E7AF0 0%, #1F62E4 100%);
 }
 
 .webconsole-output .overlay-container:hover .info {
-  padding-left: 16px;
+  padding-left: 12px;
   margin-left: calc(
     var(--rewind-button-width) - var(--message-left-padding) - var(--border-radius)
   );
