--- a/src/base.css
+++ b/src/base.css
@@ -3,7 +3,8 @@ html {
   font-size: 12px !important;
 }
 
-html, body {
+html,
+body {
   height: 100vh;
   width: 100vw;
   margin: 0;
@@ -29,4 +30,8 @@ html, body {
   --light-blue: #61cdff;
   --dark-blue: #2d7eff;
   --faint-red: rgba(255, 0, 0, 0.5);
+}
+
+.inter {
+  font-family: "Inter", sans-serif;
 }
