--- a/src/devtools/client/debugger/src/components/App.css
+++ b/src/devtools/client/debugger/src/components/App.css
@@ -27,6 +27,7 @@ button {
   background-color: var(--theme-body-background);
   height: 100%;
   overflow: hidden;
+  z-index: 10; /* ensure tooltips are above other panes */
 }
 
 .editor-container {
