--- a/src/devtools/client/themes/webconsole.css
+++ b/src/devtools/client/themes/webconsole.css
@@ -1084,7 +1084,7 @@ a.learn-more-link.webconsole-learn-more-link {
   opacity: 100%;
 }
 
-.webconsole-output .overlay-container .add-comment-icon {
+.add-comment-icon {
   font-size: 1rem;
   color: white;
 }
